--- a/coc-settings.json
+++ b/coc-settings.json
@@ -1,14 +1,6 @@
 {
-    "coc.preferences.formatOnSaveFiletypes": [
-        "css",
-        "markdown",
-        "javascript",
-        "graphql",
-        "html",
-        "yaml",
-        "json"
-    ],
-    "python.linting.enabled": true,
-    "python.linting.pylintEnabled": true,
-    "eslint.enable": false
+  "coc.preferences.formatOnSaveFiletypes": ["html"],
+  "python.linting.enabled": true,
+  "python.linting.pylintEnabled": true,
+  "prettier.trailingComma": "es5"
 }
