--- a/coc-settings.json
+++ b/coc-settings.json
@@ -2,5 +2,6 @@
   "coc.preferences.formatOnSaveFiletypes": ["html"],
   "python.linting.enabled": true,
   "python.linting.pylintEnabled": true,
-  "prettier.trailingComma": "es5"
+  "prettier.trailingComma": "es5",
+  "prettier.tabWidth": 5
 }
