insercion de live server brancy for nvim

--- a/coc-settings.json
+++ b/coc-settings.json
@@ -3,5 +3,6 @@
     "python.linting.enabled": true,
     "python.linting.pylintEnabled": true,
     "prettier.trailingComma": "es5",
-    "prettier.tabWidth": 4
+    "prettier.tabWidth": 4,
+    "eslint.enable": false
 }
