integrando soporte para c , cpp y haskell

--- a/coc-settings.json
+++ b/coc-settings.json
@@ -1,8 +1,37 @@
 {
     "coc.preferences.formatOnSaveFiletypes": ["html", "css", "markdown"],
-    "python.linting.enabled": true,
-    "python.linting.pylintEnabled": true,
+    "python.linting.enabled": false,
     "prettier.trailingComma": "es5",
     "prettier.tabWidth": 4,
-    "eslint.enable": false
+    "eslint.enable": false,
+    "languageserver": {
+        "ccls": {
+            "command": "ccls",
+            "filetypes": ["c", "cpp", "objc", "objcpp"],
+            "rootPatterns": [
+                ".ccls",
+                "compile_commands.json",
+                ".vim/",
+                ".git/",
+                ".hg/"
+            ],
+            "initializationOptions": {
+                "cache": {
+                    "directory": "/tmp/ccls"
+                }
+            }
+        },
+        "haskell": {
+            "command": "haskell-language-server-wrapper",
+            "args": ["--lsp"],
+            "rootPatterns": [
+                "*.cabal",
+                "stack.yaml",
+                "cabal.project",
+                "package.yaml",
+                "hie.yaml"
+            ],
+            "filetypes": ["haskell", "lhaskell"]
+        }
+    }
 }
